# sithra-rs-adapters

onebot/: Cargo.toml
onebot/crates/sithra_onebot/: Cargo.toml
onebot/crates/sithra_onebot/src/: api_client.rs  config.rs  error.rs  event_client.rs  internal.rs  main.rs  procedure.rs  state.rs  subscribers.rs
onebot/crates/sithra_onebot/src/internal/: api.rs  event.rs  message.rs
onebot/crates/sithra_onebot_common/: Cargo.toml
onebot/crates/sithra_onebot_common/src/: message.rs
