[package]
name = "sithra-onebot"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Internal dependencies
sithra_onebot_common.workspace = true

# External dependencies
sithra_common.workspace = true
ioevent.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio-tungstenite = "0.26.2"
